[CAMEL-21862] camel-spring-boot - Remove deprecated camel.springboot. config prefix

--- a/camel-spring-boot-upgrade-recipes/src/main/resources/META-INF/rewrite/4.13.yaml
+++ b/camel-spring-boot-upgrade-recipes/src/main/resources/META-INF/rewrite/4.13.yaml
@@ -27,3 +27,12 @@ recipeList:
       oldArtifactId: camel-fury-starter
       newArtifactId: camel-fory-starter
 #  - any new CSB recipe for C4.13 goes here and to the latest.yaml
+  - org.apache.camel.upgrade.customRecipes.PropertiesAndYamlKeyUpdate:
+      oldPropertyKey: camel.springboot.main-run-controller
+      newPropertyKey: camel.main.run-controller
+  - org.apache.camel.upgrade.customRecipes.PropertiesAndYamlKeyUpdate:
+      oldPropertyKey: camel.springboot.include-non-singletons
+      newPropertyKey: camel.main.include-non-singletons
+  - org.apache.camel.upgrade.customRecipes.PropertiesAndYamlKeyUpdate:
+      oldPropertyKey: camel.springboot.warn-on-early-shutdown
+      newPropertyKey: camel.main.warn-on-early-shutdown
