Apply OpenRewrite best practices on PRs

--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,32 @@
     </build>
     <profiles>
         <profile>
+            <id>openrewrite</id>
+            <!-- `mvn -Popenrewrite rewrite:run` -->
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.openrewrite.maven</groupId>
+                        <artifactId>rewrite-maven-plugin</artifactId>
+                        <version>6.15.0</version>
+                        <configuration>
+                            <activeRecipes>
+                                <recipe>org.openrewrite.recipes.rewrite.OpenRewriteRecipeBestPractices</recipe>
+                            </activeRecipes>
+                            <failOnDryRunResults>true</failOnDryRunResults>
+                        </configuration>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.openrewrite.recipe</groupId>
+                                <artifactId>rewrite-rewrite</artifactId>
+                                <version>0.10.1</version>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>release</id>
             <activation>
                 <property>
