--- a/camel-spring-boot-upgrade-recipes/pom.xml
+++ b/camel-spring-boot-upgrade-recipes/pom.xml
@@ -23,7 +23,7 @@
         <groupId>org.apache.camel.upgrade</groupId>
         <artifactId>camel-parent-upgrade-recipes</artifactId>
         <relativePath>../pom.xml</relativePath>
-        <version>4.14.0</version>
+        <version>4.15.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>camel-spring-boot-upgrade-recipes</artifactId>
