--- a/camel-upgrade-recipes/src/main/resources/META-INF/rewrite/latest.yaml
+++ b/camel-upgrade-recipes/src/main/resources/META-INF/rewrite/latest.yaml
@@ -18,8 +18,11 @@
 type: specs.openrewrite.org/v1beta/recipe
 name: org.apache.camel.upgrade.CamelMigrationRecipe
 displayName: Migrate to @camel-version@
-description: Migrates Apache Camel application to @camel-version@
+description: Migrates Apache Camel application to @camel-version@.
 recipeList:
+  - org.apache.camel.upgrade.camel414.CamelMigrationRecipe
+  - org.apache.camel.upgrade.camel413.CamelMigrationRecipe
+  - org.apache.camel.upgrade.camel412.CamelMigrationRecipe
   - org.apache.camel.upgrade.camel411.CamelMigrationRecipe
   - org.apache.camel.upgrade.camel410.CamelMigrationRecipe
   - org.apache.camel.upgrade.camel49.CamelMigrationRecipe
