--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,8 @@
         <camel4.10-version>4.10.0</camel4.10-version>
         <camel4.12-version>4.12.0</camel4.12-version>
 
+        <camel4.10-lts-version>4.10.6</camel4.10-lts-version>
+
         <camel-version>${project.version}</camel-version>
         <camel-spring-boot-version>${project.version}</camel-spring-boot-version>
 
