--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
         <camel4.9-version>4.9.0</camel4.9-version>
         <camel4.10-version>4.10.0</camel4.10-version>
         <camel4.12-version>4.12.0</camel4.12-version>
+        <camel4.14-version>4.14.0</camel4.14-version>
 
         <camel4.10-lts-version>4.10.6</camel4.10-lts-version>
         <camel-latest-version>4.14.0</camel-latest-version>
